# streamdeck-dcs-interface

./: CHANGELOG.md  COMMIT_MESSAGE.md  COMMUNICATION_DEBUG_ANALYSIS.md  CONTRIBUTING.md  ENCODER_DISPLAY_IMPLEMENTATION_OLD.md.bak  ENCODER_PRESS_IMPLEMENTATION.md  FIX_ID_LOOKUP_GLOBAL_SETTINGS.md  GIT_COMMIT_AND_PR.md  ID_LOOKUP_IMPLEMENTATION_SUMMARY.md  ID_LOOKUP_WINDOW_ANALYSIS.md  ID_LOOKUP_WINDOW_ANALYSIS_EN.md  ID_LOOKUP_WINDOW_REWRITE_SUMMARY.md  MIGRATION_SUMMARY.md  MOVABLE_LEV_SUPPORT.md  PRODUCTION_READINESS.md  REACT_INTEGRATION_SUMMARY.md  REACT_MIGRATION.md  REACT_MIGRATION_GUIDE.md  README.md
Sources/backend-cpp/: BUILD_CMAKE.md  CMakeLists.txt
Sources/backend-cpp/ElgatoSD/: CMakeLists.txt  ESDBasePlugin.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDSDKDefines.h  ElgatoSD.vcxproj
Sources/backend-cpp/SimulatorInterface/: CMakeLists.txt  SimulatorInterface.vcxproj
Sources/backend-cpp/StreamdeckContext/: CMakeLists.txt  StreamdeckContext.cpp  StreamdeckContext.h  StreamdeckContext.vcxproj
Sources/backend-cpp/StreamdeckContext/ExportMonitors/: EncoderDisplayMonitor.cpp  EncoderDisplayMonitor.h
Sources/backend-cpp/StreamdeckContext/ExportMonitors/test/: EncoderDisplayMonitorTest.cpp
Sources/backend-cpp/StreamdeckContext/SendActions/: EncoderAction.cpp  EncoderAction.h  IncrementAction.cpp  IncrementAction.h  SendActionFactory.cpp  SendActionFactory.h
Sources/backend-cpp/StreamdeckInterface/: CMakeLists.txt  StreamdeckInterface.cpp  StreamdeckInterface.h  StreamdeckInterface.vcxproj
Sources/backend-cpp/Test/: CMakeLists.txt  Test.vcxproj
Sources/backend-cpp/Utilities/: CMakeLists.txt  LuaReader.cpp  LuaReader.h  Utilities.vcxproj
Sources/com.ctytler.dcs.sdPlugin/: manifest.json
Sources/com.ctytler.dcs.sdPlugin/helpDocs/: helpContents.md
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/: encoder_prop_inspector.html  id_lookup_window.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/button-react/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/button-react/static/js/: main.bb6d847f.js  main.d3fe6501.js  main.d3fe6501.js.map
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/comms-react/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/comms-react/static/js/: main.cf5d85a9.js
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/dcsbios-react/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/dcsbios-react/static/js/: main.523c050b.js  main.523c050b.js.map  main.8fb333d2.js
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/encoder-react/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/encoder-react/static/css/: main.24c6d0cc.css
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/encoder-react/static/js/: main.5d69373b.js  main.5d69373b.js.map  main.c0e4e992.js
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/idlookup-react/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/idlookup-react/static/css/: main.1f36d574.css
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/idlookup-react/static/js/: main.f8769503.js
Sources/com.ctytler.dcs.sdPlugin/propertyinspector/js/: dcs_bios_pi.js  external_windows_functions.js  id_lookup_window_functions.js
Sources/com.ctytler.dcs.sdPlugin/windows/comms/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/windows/comms/static/js/: main.01a31057.js  main.01a31057.js.map
Sources/com.ctytler.dcs.sdPlugin/windows/dcsbios/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/windows/dcsbios/static/css/: main.fedde499.css  main.fedde499.css.map
Sources/com.ctytler.dcs.sdPlugin/windows/dcsbios/static/js/: main.379cca57.js  main.379cca57.js.map
Sources/com.ctytler.dcs.sdPlugin/windows/idlookup/: asset-manifest.json  index.html
Sources/com.ctytler.dcs.sdPlugin/windows/idlookup/static/css/: main.24c6d0cc.css.map
Sources/com.ctytler.dcs.sdPlugin/windows/idlookup/static/js/: main.63c89b74.js  main.63c89b74.js.map
Sources/frontend-react-js/: ARCHITECTURE.md  PROPERTYINSPECTORS.md  WINDOWS_AND_PI_ARCHITECTURE.md  package-lock.json  package.json
Sources/frontend-react-js/src/: index.tsx
Sources/frontend-react-js/src/api/Streamdeck/: StreamdeckWebsocket.tsx
Sources/frontend-react-js/src/components/: DcsBiosIdLookup.module.css  SearchBar.module.css  ValueMappingList.module.css  ValueMappingList.tsx  ValueMappingRow.module.css  ValueMappingRow.tsx
Sources/frontend-react-js/src/forms/: StateMonitor.tsx
Sources/frontend-react-js/src/hooks/: usePropertyInspector.ts
Sources/frontend-react-js/src/propertyinspectors/: ButtonPropertyInspector.module.css  ButtonPropertyInspector.tsx  CommonPropertyInspector.module.css  DcsBiosPropertyInspector.module.css  DcsBiosPropertyInspector.tsx  EncoderPropertyInspector.module.css  EncoderPropertyInspector.tsx
Sources/frontend-react-js/src/types/: ButtonPropertyInspectorTypes.ts  PropertyInspectorTypes.ts  StreamDeckTypes.ts
Sources/frontend-react-js/src/windows/: CommsWindow.module.css  CommsWindow.tsx  DCBiosWindow.tsx  IdLookupWindow.module.css  IdLookupWindow.tsx
Tools/: build_plugin.bat  build_plugin_cmake.bat
